full-moon/tests/cases/fail/parser/stmt-after-break-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: unexpected statement after last statement
  ┌─ source.lua:3:1
  │
3 │ print("2")
  │ ^^^^^


